force-app/main/default/objects/Invoice__c/Invoice__c.object-meta.xml
<CustomObject>
    <description>Facture client issue d'un devis Salesforce ou créée directement.</description>
    <label>Facture</label>
    <nameField>
        <displayFormat>DOC-{000000}</displayFormat>
        <label>Identifiant interne</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>