force-app/main/default/objects/Invoice__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Client</label><referenceTo>Account</referenceTo><relationshipLabel>Factures</relationshipLabel><relationshipName>Invoices</relationshipName><required>true</required><type>Lookup</type>
</CustomField>