force-app/main/default/objects/Invoice__c/fields/AmountPaid__c.field-meta.xml
<CustomField><fullName>AmountPaid__c</fullName><label>Montant payé</label><summarizedField>Payment__c.Amount__c</summarizedField><summaryForeignKey>Payment__c.Invoice__c</summaryForeignKey><summaryOperation>Sum</summaryOperation><type>Summary</type></CustomField>