force-app/main/default/objects/Invoice__c/fields/BillingCity__c.field-meta.xml
<CustomField><fullName>BillingCity__c</fullName><label>Ville figée</label><length>100</length><required>false</required><type>Text</type></CustomField>