force-app/main/default/objects/Invoice__c/fields/BillingCountry__c.field-meta.xml
<CustomField><fullName>BillingCountry__c</fullName><label>Pays figé</label><length>100</length><required>false</required><type>Text</type></CustomField>