force-app/main/default/objects/Invoice__c/fields/BillingEntity__c.field-meta.xml
<CustomField>
    <fullName>BillingEntity__c</fullName><deleteConstraint>Restrict</deleteConstraint><label>Entité de facturation</label><referenceTo>BillingEntity__c</referenceTo><relationshipLabel>Factures</relationshipLabel><relationshipName>Invoices</relationshipName><required>true</required><type>Lookup</type>
</CustomField>