force-app/main/default/objects/Invoice__c/fields/BillingPeriodEnd__c.field-meta.xml
<CustomField><fullName>BillingPeriodEnd__c</fullName><label>Fin de période facturée</label><required>false</required><type>Date</type></CustomField>