force-app/main/default/objects/Invoice__c/fields/BillingPeriodStart__c.field-meta.xml
<CustomField><fullName>BillingPeriodStart__c</fullName><label>Début de période facturée</label><required>false</required><type>Date</type></CustomField>