force-app/main/default/objects/Invoice__c/fields/BillingPostalCode__c.field-meta.xml
<CustomField><fullName>BillingPostalCode__c</fullName><label>Code postal figé</label><length>20</length><required>false</required><type>Text</type></CustomField>