force-app/main/default/objects/Invoice__c/fields/BillingRule__c.field-meta.xml
<CustomField><fullName>BillingRule__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Règle de facturation</label><referenceTo>BillingRule__c</referenceTo><relationshipLabel>Factures</relationshipLabel><relationshipName>Invoices</relationshipName><required>false</required><type>Lookup</type></CustomField>