force-app/main/default/objects/Invoice__c/fields/BillingStreet__c.field-meta.xml
<CustomField><fullName>BillingStreet__c</fullName><label>Adresse figée</label><required>false</required><type>TextArea</type></CustomField>