force-app/main/default/objects/Invoice__c/fields/CommitmentNumber__c.field-meta.xml
<CustomField><fullName>CommitmentNumber__c</fullName><label>Numéro d'engagement</label><length>50</length><required>false</required><type>Text</type></CustomField>