force-app/main/default/objects/Invoice__c/fields/CreditedAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditedAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Montant crédité</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>