force-app/main/default/objects/Invoice__c/fields/CreditReason__c.field-meta.xml
<CustomField>
    <fullName>CreditReason__c</fullName>
    <label>Motif de l’avoir</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>