force-app/main/default/objects/Invoice__c/fields/CustomerName__c.field-meta.xml
<CustomField><fullName>CustomerName__c</fullName><label>Nom du client figé</label><length>255</length><required>true</required><type>Text</type></CustomField>