force-app/main/default/objects/Invoice__c/fields/CustomerRegistrationNumber__c.field-meta.xml
<CustomField><fullName>CustomerRegistrationNumber__c</fullName><label>SIREN client figé</label><length>20</length><required>false</required><type>Text</type></CustomField>