force-app/main/default/objects/Invoice__c/fields/CustomerTaxId__c.field-meta.xml
<CustomField><fullName>CustomerTaxId__c</fullName><label>Identifiant fiscal client</label><length>40</length><required>false</required><type>Text</type></CustomField>