force-app/main/default/objects/Invoice__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField><fullName>DeliveryAddress__c</fullName><label>Adresse de livraison</label><required>false</required><type>TextArea</type></CustomField>