force-app/main/default/objects/Invoice__c/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Type de document</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Invoice</fullName><default>true</default><label>Facture</label></value>
            <value><fullName>CreditNote</fullName><default>false</default><label>Avoir</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>