force-app/main/default/objects/Invoice__c/fields/DueDate__c.field-meta.xml
<CustomField><fullName>DueDate__c</fullName><label>Date d'échéance</label><required>false</required><type>Date</type></CustomField>