force-app/main/default/objects/Invoice__c/fields/GenerationKey__c.field-meta.xml
<CustomField><fullName>GenerationKey__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Clé de génération</label><length>100</length><required>false</required><type>Text</type><unique>true</unique></CustomField>