force-app/main/default/objects/Invoice__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName><caseSensitive>false</caseSensitive><externalId>true</externalId><label>Numéro de facture</label><length>50</length><required>false</required><type>Text</type><unique>true</unique>
</CustomField>