force-app/main/default/objects/Invoice__c/fields/IsLocked__c.field-meta.xml
<CustomField><fullName>IsLocked__c</fullName><defaultValue>false</defaultValue><label>Document verrouillé</label><type>Checkbox</type></CustomField>