force-app/main/default/objects/Invoice__c/fields/IssueDate__c.field-meta.xml
<CustomField><fullName>IssueDate__c</fullName><label>Date d'émission</label><required>false</required><type>Date</type></CustomField>