force-app/main/default/objects/Invoice__c/fields/OperationCategory__c.field-meta.xml
<CustomField><fullName>OperationCategory__c</fullName><label>Nature des opérations</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Services</fullName><default>true</default><label>Prestations de services</label></value><value><fullName>Goods</fullName><default>false</default><label>Livraisons de biens</label></value><value><fullName>Mixed</fullName><default>false</default><label>Biens et services</label></value></valueSetDefinition></valueSet></CustomField>