force-app/main/default/objects/Invoice__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Opportunité</label><referenceTo>Opportunity</referenceTo><relationshipLabel>Factures</relationshipLabel><relationshipName>Invoices</relationshipName><required>false</required><type>Lookup</type>
</CustomField>