force-app/main/default/objects/Invoice__c/fields/Origin__c.field-meta.xml
<CustomField><fullName>Origin__c</fullName><label>Origine</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Quote</fullName><default>false</default><label>Devis</label></value><value><fullName>Direct</fullName><default>true</default><label>Facture directe</label></value><value><fullName>Scheduled</fullName><default>false</default><label>Facturation planifiée</label></value><value><fullName>CreditNote</fullName><default>false</default><label>Avoir</label></value></valueSetDefinition></valueSet></CustomField>