force-app/main/default/objects/Invoice__c/fields/OriginalInvoice__c.field-meta.xml
<CustomField>
    <fullName>OriginalInvoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facture d’origine</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Avoirs</relationshipLabel>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>