force-app/main/default/objects/Invoice__c/fields/ServiceCode__c.field-meta.xml
<CustomField><fullName>ServiceCode__c</fullName><label>Code service</label><length>50</length><required>false</required><type>Text</type></CustomField>