force-app/main/default/objects/Invoice__c/fields/ServiceDate__c.field-meta.xml
<CustomField><fullName>ServiceDate__c</fullName><label>Date de livraison ou prestation</label><required>false</required><type>Date</type></CustomField>