force-app/main/default/objects/Invoice__c/fields/SourceQuote__c.field-meta.xml
<CustomField>
    <fullName>SourceQuote__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Devis d'origine</label><referenceTo>Quote</referenceTo><relationshipLabel>Factures</relationshipLabel><relationshipName>Invoices</relationshipName><required>false</required><type>Lookup</type>
</CustomField>