force-app/main/default/objects/Invoice__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Statut</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Draft</fullName><default>true</default><label>Brouillon</label></value><value><fullName>Issued</fullName><default>false</default><label>Émise</label></value><value><fullName>Sent</fullName><default>false</default><label>Envoyée</label></value><value><fullName>PartiallyPaid</fullName><default>false</default><label>Partiellement payée</label></value><value><fullName>Paid</fullName><default>false</default><label>Payée</label></value><value><fullName>Credited</fullName><default>false</default><label>Annulée par avoir</label></value></valueSetDefinition></valueSet>
</CustomField>