force-app/main/default/objects/Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField><fullName>Subtotal__c</fullName><label>Total HT</label><summarizedField>InvoiceLine__c.NetAmount__c</summarizedField><summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey><summaryOperation>Sum</summaryOperation><type>Summary</type></CustomField>