force-app/main/default/objects/Invoice__c/fields/TaxAmount__c.field-meta.xml
<CustomField><fullName>TaxAmount__c</fullName><label>TVA</label><summarizedField>InvoiceLine__c.TaxAmount__c</summarizedField><summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey><summaryOperation>Sum</summaryOperation><type>Summary</type></CustomField>