force-app/main/default/objects/Invoice__c/fields/TotalAmount__c.field-meta.xml
<CustomField><fullName>TotalAmount__c</fullName><label>Total TTC</label><summarizedField>InvoiceLine__c.GrossAmount__c</summarizedField><summaryForeignKey>InvoiceLine__c.Invoice__c</summaryForeignKey><summaryOperation>Sum</summaryOperation><type>Summary</type></CustomField>