force-app/main/default/objects/Invoice__c/fields/VatOnDebits__c.field-meta.xml
<CustomField><fullName>VatOnDebits__c</fullName><defaultValue>false</defaultValue><label>Option TVA sur les débits</label><type>Checkbox</type></CustomField>