force-app/main/default/objects/Invoice__c/validationRules/CreditNoteRequiresOriginal.validationRule-meta.xml
<ValidationRule>
    <fullName>CreditNoteRequiresOriginal</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(DocumentType__c, "CreditNote"), ISBLANK(OriginalInvoice__c))</errorConditionFormula>
    <errorMessage>Un avoir doit référencer la facture d’origine.</errorMessage>
</ValidationRule>